test/tests/compiler/14_pointers/invalid_types/cast_double_to_pointer.plx
#  It's illegal to cast a double to a pointer 

pub fn main(none) i32 {
    d: f64 = 0.0
    x: *i32 = cast<*i32>(d)
    return nil
}
